src/np222kk/dv507/a2/test/cases/negative/test_neg_declaration_02.ofp
void main() {
    i = 1;
    if (true) {
        int i;
    }
}